# tuition-calculator-webdev

./: .env  Cargo.toml  README.md
src/: main.rs
src/htdoc/: error.html  index.html  result.html  style.css
